<resources>
    <string name="app_name">IT Assets</string>
    <string name="txt_email_invalido">Email inválido</string>
    <string name="txt_indique_password">Indique uma palavra-passe</string>
    <string name="txt_generic_error">Ocorreu um erro</string>
    <string name="txt_sem_internet">Sem ligação à internet</string>
    <string name="txt_credenciais_erradas">Credenciais Inválidas</string>
    <string name="txt_ler_qrcode">Ler Código QR</string>
    <string name="txt_empresa">Empresa</string>
    <string name="txt_nif">NIF</string>
    <string name="txt_cancelar">Cancelar</string>
    <string name="txt_sim">Sim</string>
    <string name="txt_confirmar_empresa_login">Tem a certeza que se pretende ligar a este servidor?</string>
    <string name="txt_url_invalido">URL inválido</string>
    <string name="txt_configurar_servidor">Configurar Servidor</string>
    <string name="lb_url">Indique o dominio do servidor a que se pretende ligar.</string>
    <string name="txt_hint_server_domain">api.itassets.pt</string>
    <string name="txt_ok">OK</string>
    <string name="txt_terminar_sessao">Terminar Sessão</string>
    <string name="txt_itens">Itens</string>
    <string name="txt_grupo_itens">Grupo Itens</string>
    <string name="txt_alocar">Alocar</string>
    <string name="txt_reparar">Reparar</string>
    <string name="txt_eu">Eu</string>
    <string name="tv_nome">Nome</string>
    <string name="tv_nSerie">Nº Serie</string>
    <string name="tv_categoria">Categoria</string>
    <string name="tv_nota">Notas</string>
    <string name="txt_adicionar_item">Adicionar Item</string>
    <string name="txt_erro_char_ultrapassado">Ultrapassou o Máximo de Caracteres!</string>
    <string name="txt_editar">Editar</string>
    <string name="txt_remover">Remover</string>
    <string name="act_Titulo">Editar: %1$s</string>
    <string name="txt_adicionar_grupo_de_itens">Adicionar Grupo de Itens</string>
    <string name="txt_nome_Grupo">Nome do Grupo</string>
    <string name="txt_notas">Notas</string>
    <string name="txt_itens_associados">Itens associados</string>
    <string name="txt_editar_grupo_itens">Editar Grupo Itens</string>
    <string name="txt_nao_aplicavel">Não Aplicável</string>
    <string name="txt_confirm_remover_item">Tem a certeza que deseja remover o Itens?</string>
    <string name="txt_confirm_remover_alocacao">Tem a certeza que deseja cancelar este Pedido de Alocação?</string>
    <string name="txt_remover_item">Remover Item</string>
    <string name="txt_meus_itens">Os Meus Itens</string>
    <string name="txt_pedidos_reparacao">Minhas Reparações</string>
    <string name="txt_remover_alocacao">Cancelar Pedido de Alocação</string>
    <string name="txt_dataPedido">Data Pedido</string>
    <string name="txt_item">Item</string>
    <string name="txt_status">Estado</string>
    <string name="txt_aberto">Aberto</string>
    <string name="txt_aprovado">Aprovado</string>
    <string name="txt_negado">Negado</string>
    <string name="txt_devolvido">Devolvido</string>
    <string name="txt_cancelado">Cancelado</string>
    <string name="txt_requerente">Requerente</string>
    <string name="txt_pedido_num">Pedido Nº</string>
    <string name="txt_estado">Estado</string>
    <string name="txt_responsavel">Responsável</string>
    <string name="txt_data_pedido">Data Pedido</string>
    <string name="txt_data_inicio">Data Inicio</string>
    <string name="txt_data_fim">Data Fim</string>
    <string name="txt_obs">Observações</string>
    <string name="heading_dados_resposta">Dados Resposta</string>
    <string name="txt_aprovador">Aprovador</string>
    <string name="txt_guardar">Guardar</string>
    <string name="txt_campo_obrigatorio">Campo obrigatório</string>
    <string name="devolver">Devolver</string>
    <string name="adicionar_grupo_de_itens">Adicionar Grupo de Itens</string>
    <string name="txt_grupo">Grupo</string>
    <string name="txt_emRevisao">Em Revisão</string>
    <string name="txt_emPreparacao">Em Preparação</string>
    <string name="txt_concluido">Concluído</string>
    <string name="Num_Pedido_Reparacao">Pedido de Reparação Nº</string>
    <string name="txt_pesquisar">Pesquisar</string>
    <string name="Num_Pedido_Alocacao">Numero Pedido Alocacao</string>
    <string name="string_Pedido_Reparacao">Pedido de Reparação</string>
    <string name="string_objeto_reparacao">Objeto(s) em Reparação</string>
    <string name="string_desc_problema">Descrição do Problema</string>
    <string name="Titulo_reparacao">Pedido Reparação Nª</string>
    <string name="txt_finalizar">Finalizar</string>
    <string name="txt_remover_reparacao">Cancelar Pedido de Reparação</string>
    <string name="txt_confirmar_remover_pedido_reparacao">Tem certeza que pretende cancelar este pedido de reparação?</string>
    <string name="txt_erro_pedido_reparacao_cancelado">Erro: Não é possível cancelar este Pedido de Reparação!</string>
    <string name="txt_erro_pedido_reparacao_finalizado">Erro: Não é possível finalizar este Pedido de Reparação!</string>
    <string name="txt_erro_pedido_reparacao_nao_encontrado">Erro: Pedido de Reparação não foi encontrado!</string>
    <string name="txt_detalhes_reparacao">Detalhes da Reparação</string>
    <string name="txt_num_pedido_reparacao_finalizado">Finalizar Pedido de Reparação Nº</string>
    <string name="txt_erro_pedido_alocacao_nao_encontrado">Erro: Pedido de Alocação não encontrado!</string>
    <string name="txt_novo_pedido_alocacao">Novo Pedido de Alocação</string>
    <string name="txt_selecionar_item_grupo">Selecione um item ou grupo</string>
    <string name="txt_erro_pedido_alocacao_devolver">Erro: Não é possível devolver este Pedido de Alocação!</string>
    <string name="txt_erro_pedido_alocacao_cancelar">Erro: Não é possível cancelar este Pedido de Alocação!</string>
    <string name="txt_insira_nome_item">Erro: Insira o Nome do Item!</string>
    <string name="txt_objeto_invalido">Objeto inválido</string>
    <string name="txt_Sem_permissao_camara">Sem permissão para camara!</string>
    <string name="txt_item_nao_encontrado">Erro: Item não encontrado!</string>
    <string name="txt_insira_nome_grupoItens">Erro: Insira o Nome do Grupo de Itens!</string>
    <string name="txt_operacao_bem_sucedida">Operação bem sucedida!</string>
    <string name="txt_qrcode_invalido">QRCode inválido</string>
    <string name="txt_erro_id_item_invalido">Erro: ID do Item inválido</string>
    <string name="txt_erro_id_grupoItem_invalido">Erro: ID do Grupo inválido</string>
    <string name="txt_editar_item">Editar Item</string>
    <string name="txt_iniciar_sessao">Iniciar Sessão</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="itens_nao_associados">Ainda não existem itens/Grupos de itens associados</string>
    <string name="txt_token_invalido">Token inválido. Inicie sessão novamente.</string>
    <string name="txt_coloque_dedo_sensor_title">Coloque o dedo no sensor para iniciar sessão</string>
    <string name="txt_coloque_dedo_sensor_description">Coloque a sua impressão digital sobre o sensor de impressão digital para validar a sua identidade e iniciar sessão</string>
    <string name="adicionar_pedido_reparacao">Adicionar pedido Reparação</string>
    <string name="problema">Problema</string>
    <string name="error_problema">Escreva um problema</string>
    <string name="descricao_problema">Descrição do Problema</string>
    <string name="sem_itens_para_grupo">Sem itens válidos para criar novo grupo</string>
    <string name="meus_dados">Meus Dados</string>
    <string name="sem_dados_a_mostrar">Sem dados a mostrar</string>
    <string name="txt_alocacao_atualizada">Alocação Atualizada!</string>
    <string name="txt_alocacao_submetido">Pedido de Alocação Submetido!</string>
    <string name="txt_reparacao_atualizado">Pedido de Reparação Atualizado!</string>
    <string name="txt_reparacao_submetido">Pedido de Reparação submetido!</string>
    <string name="txt_select_item_error">Selecione pelo menos 1 item.</string>
    <string name="txt_remover_grupo">Remover Grupo</string>
    <string name="txt_confirmar_remover_grupo">Tem a certeza que deseja remover o Grupo Itens?</string>
    <string name="txt_grupo_nao_encontrado">Grupo não encontrado!</string>

</resources>