<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/item_lista_itens"
        android:enabled="true"
        android:icon="@drawable/ic_item"
        android:title="@string/txt_itens"/>
    <item
        android:id="@+id/item_lista_grupos"
        android:enabled="true"
        android:icon="@drawable/ic_group"
        android:title="@string/txt_grupo_itens"/>
    <item
        android:id="@+id/item_alocar"
        android:enabled="true"
        android:icon="@drawable/ic_alocate"
        android:title="@string/txt_alocar"/>

    <item
        android:id="@+id/item_reparar"
        android:enabled="true"
        android:icon="@drawable/ic_repair"
        android:title="@string/txt_reparar"/>

    <item
        android:id="@+id/item_user"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="@string/txt_eu"/>
</menu>