<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.reparacao.FinalizarPedidoReparacaoActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_num_pedido_reparacao_finalizado"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/tvId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginBottom="30dp"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputOutlinedStyle"
        android:id="@+id/tf_respostaObs"
        app:boxStrokeColor="?attr/colorPrimary"
        app:boxStrokeErrorColor="?attr/colorError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_detalhes_reparacao"
        android:layout_marginBottom="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="200"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_finalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_finalizar"
        android:onClick="onClick_btn_confirmar_finalizar" />

</LinearLayout>