<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".views.reparacao.DetalhesReparacaoActivity">

    <!-- region indentificação pedido/estado -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_Pedido_Reparacao"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TV_id_pedido_reparacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:gravity="right"
                android:text="0000" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0.5">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_estado"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TV_estado_pedido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="right"
                android:text="Texto Exemplo" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- endregion -->

    <!-- region requerente -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_requerente"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TV_requerente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="right"
            android:text="Texto Exemplo" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- endregion -->


    <!-- region data pedido -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_data_pedido"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TV_data_pedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="right"
            android:text="0000-00-00 00:00:00" />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- endregion -->

    <!-- region data Inicio -->


    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- endregion -->

    <!-- region objeto -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Objeto Alocado"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/LV_objeto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="right"
            android:text="Texto Exemplo" />

        <ListView
            android:id="@+id/LV_Grupo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="right"
            android:text="Texto Exemplo" />
        <TextView
            android:id="@+id/TV_sem_dados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible">
        </TextView>


    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- endregion -->

    <!-- region observações -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_desc_problema"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TV_descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="right"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget lorem tristique, pharetra risus vel, tristique turpis. Suspendisse quis elit quis ante tincidunt fermentum." />
    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <!-- endregion -->

    <Button
        android:id="@+id/btnCancelar"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick_btn_cancelar"
        android:text="@string/txt_cancelar" />

    <LinearLayout
        android:id="@+id/LL_dados_resposta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            style="@style/TextAppearance.Material3.HeadlineMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:text="@string/heading_dados_resposta"
            android:textStyle="bold" />

        <!-- region aprovador -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_responsavel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TV_reponsavel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="right"
                android:text="Texto Exemplo" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- endregion -->

        <!-- region data inicio -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_data_inicio"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TV_data_inicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="right"
                android:text="0000-00-00 00:00:00" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- endregion -->

        <!-- region data fim -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_data_fim"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TV_data_fim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="right"
                android:text="0000-00-00 00:00:00" />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- endregion -->

        <!-- region observações -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_obs"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TV_observacoes_resposta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="right"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget lorem tristique, pharetra risus vel, tristique turpis. Suspendisse quis elit quis ante tincidunt fermentum." />
        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnFinalizar"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick_btn_finalizar"
            android:text="@string/txt_finalizar" />

        <!-- endregion -->

    </LinearLayout>

</LinearLayout>